--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
